MVP - finished study questions + stretch!(fixed navbar)

--- a/css/index.css
+++ b/css/index.css
@@ -172,6 +172,7 @@ p {
   width: 100%;
   height: 100px;
   background-color: #F6F6F6;
+  position: fixed;
 }
 .topnav .navwide {
   margin: auto;
@@ -206,6 +207,9 @@ footer {
   display: flex;
   justify-content: center;
   align-items: center;
+}
+.home {
+  padding-top: 100px;
 }
 .home .intro h2 {
   padding: 15px;
