--- a/less/home-page.less
+++ b/less/home-page.less
@@ -15,7 +15,7 @@
 
 .home {
 
-  // padding-top: 100px;
+  padding-top: 100px;
 
   .intro {
 
