--- a/less/navigation.less
+++ b/less/navigation.less
@@ -18,7 +18,7 @@
     width: 100%;
     height: 100px;
     .navbackground();
-    // position: fixed;
+    position: fixed;
     
 
     .navwide{
